force-app/main/default/objects/QuoteApprovalForm__c/QuoteApprovalForm__c.object-meta.xml
<CustomObject>
    <description>Stores all relevant information coming from the Plusnet Portal</description>
    <label>Quote Approval Form</label>
    <nameField>
        <displayFormat>QF-{0000}</displayFormat>
        <label>Quote Approval Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Approval Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>