force-app/main/default/objects/QuoteApprovalForm__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <label>Locale</label>
    <length>10</length>
    <type>Text</type>
</CustomField>