force-app/main/default/objects/QuoteApprovalForm__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Id</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quote Approval Forms</relationshipLabel>
    <relationshipName>Quote_Approval_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>