force-app/main/default/objects/QuoteApprovalForm__c/fields/SignedByEmail__c.field-meta.xml
<CustomField>
    <fullName>SignedByEmail__c</fullName>
    <label>Signed By Email</label>
    <type>Email</type>
</CustomField>