force-app/main/default/objects/QuoteApprovalForm__c/fields/SignedByName__c.field-meta.xml
<CustomField>
    <fullName>SignedByName__c</fullName>
    <label>Signed By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>