force-app/main/default/objects/QuoteApprovalForm__c/fields/SignedByPosition__c.field-meta.xml
<CustomField>
    <fullName>SignedByPosition__c</fullName>
    <label>Signed By Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>