force-app/main/default/objects/QuoteApprovalForm__c/fields/Term1__c.field-meta.xml
<CustomField>
    <fullName>Term1__c</fullName>
    <label>Term 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>