force-app/main/default/objects/QuoteApprovalForm__c/fields/Term2__c.field-meta.xml
<CustomField>
    <fullName>Term2__c</fullName>
    <label>Term 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>