force-app/main/default/objects/QuoteApprovalForm__c/fields/Term3__c.field-meta.xml
<CustomField>
    <fullName>Term3__c</fullName>
    <label>Term 3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>